<resources>
    <string name="app_name">Owntracks</string>
    <string name="preferencesServer">"Connection"</string>
    <string name="preferencesHost">"Host"</string>
    <string name="preferencesPort">"Port"</string>
    <string name="preferencesWebsocket">Use WebSockets</string>
    <string name="preferencesUserUsername">"Username"</string>
    <string name="preferencesDeviceName">"Device ID"</string>
    <string name="preferencesConnectionSecurity">"Connection security"</string>
    <string name="preferencesBrokerAuth">"Authentication"</string>
    <string name="preferencesBrokerPassword">"Password"</string>
    <string name="preferencesUserUsernameHosted">"User"</string>
    <string name="preferencesBrokerPasswordHosted">"Token"</string>
    <string name="preferencesDeviceNameHosted">"Device"</string>
    <string name="preferencesCaCrtPath">CA certificate</string>
    <string name="preferencesClientCrtPath">Client certificate</string>
    <string name="preferencesClientCrtPassword">Client certificate password</string>
    <string name="preferencesServerCancel">"Disconnect"</string>
    <string name="preferencesServerConnect">"Connect"</string>
    <string name="preferencesLicenses">"Thanks"</string>
    <string name="preferencesLicensesSummary">"Thanks to the authors of included libraries"</string>
    <string name="preferencesNotification">Notifications</string>
    <string name="preferencesNotificationEvents">Events </string>
    <string name="preferencesNotificationEventsSummary">Notify about received events </string>
    <string name="preferencesNotificationSummary">"Display a notification to keep running"</string>
    <string name="preferencesNotificationLocationSummary">"Display last reported location and time"</string>
    <string name="preferencesNotificationLocation">"Last reported location"</string>
    <string name="preferencesNotificationMessagesSummary">Notify about received messages</string>
    <string name="preferencesNotificationMessages">Messages</string>
    <string name="preferencesConnectionAdvancedModeSummary">"Show advanced connection preferences"</string>
    <string name="preferencesConnectionAdvancedMode">"Advanced connection preferences"</string>
    <string name="preferencesAdvanced">"Advanced"</string>
    <string name="preferencesVersion">"Version"</string>
    <string name="preferencesReporting">"Reporting"</string>
    <string name="preferencesTopic">"Topic"</string>
    <string name="preferencesTopicSummary">"Topic to send and receive messages"</string>
    <string name="preferencesRetain">"Publish retained"</string>
    <string name="preferencesRetainSummary">"Retained flag for publishes"</string>
    <string name="preferencesQOS">"Publish QOS"</string>
    <string name="preferencesQOSSummary">"QOS for publishes"</string>
    <string name="preferencesBackgroundUpdatesInterval">Fastest reporting interval</string>
    <string name="preferencesBackgroundUpdatesIntervalSummary">Fastest interval for automatic reporting</string>
    <string name="preferencesBackroundUpdates">Automatic location reporting</string>
    <string name="preferencesTrackerId">Tracker ID</string>
    <string name="preferencesTrackerIdSummary">Tracker ID used for reporting</string>
    <string name="preferencesBackgroundUpdatesSummary">Report location automatically</string>
    <string name="preferencesLocatorDisplacement">Locator background  displacement</string>
    <string name="preferencesLocatorDisplacementSummary">Distance between location updates</string>
    <string name="preferencesLocatorInterval">Locator background interval</string>
    <string name="preferencesLocatorIntervalSummary">Seconds between location updates</string>
    <string name="preferencesInfo">Information</string>
    <string name="preferencesRepository">Source Code</string>
    <string name="preferencesRepositorySummary">github.com/owntracks/android</string>
    <string name="preferencesDocumentation">Documentation</string>
    <string name="preferencesDocumentationSummary">owntracks.org/booklet/</string>
    <string name="preferencesTwitter">Twitter</string>
    <string name="preferencesTwitterSummary">twitter.com/owntracks</string>
    <string name="preferencesCommunity">Community</string>
    <string name="preferencesCommunitySummary">community.owntracks.org</string>
    <string name="preferencesEncryption">Encryption</string>
    <string name="preferencesEncryptionKeySummary">Symmetric key for payload encryption </string>
    <string name="preferencesEncryptionKey">Encryption Key</string>
    <string name="preferencesDeviceTopic">Device topic</string>
    <string name="preferencesDeviceTopicSummary">The topic base for publishes</string>
    <string name="preferencesBaseTopic">Base topic</string>
    <string name="preferencesBaseTopicSummary">The topic base for subscriptions</string>
    <string name="bookletModes"><a href="https://www.google.pl/">Google</a></string>
    <string name="connectivityConnecting">"Connecting"</string>
    <string name="connectivityConnected">"Connected"</string>
    <string name="connectivityDisconnecting">"Disconnecting"</string>
    <string name="connectivityDisconnected">"Disconnected"</string>
    <string name="connectivityDisconnectedUserDisconnect">"Disconnected: By user"</string>
    <string name="connectivityDisconnectedDataDisabled">"Disconnected: Data disabled"</string>
    <string name="na">Not available</string>
    <string name="currentLocation">Use current location</string>
    <string name="shareLocation">Share location</string>
    <string name="share">Share</string>
    <string name="save">"Save"</string>
    <string name="cancel">"Cancel"</string>
    <string name="error">"Error"</string>
    <string name="close">"Close"</string>
    <string name="statePublished">"Location reported"</string>
    <string name="stateNotopic">"Error: No topic set"</string>
    <string name="stateQueued">"Message delivery deferred"</string>
    <string name="stateLocatingFail">"Error: Unable to acquire location"</string>
    <string name="stateBluetoothFail">"Error: Bluetooth is unavailable"</string>
    <string name="statePublishing">"Reporting"</string>
    <string name="stateWaiting">"Waiting for connection"</string>
    <string name="stateIdle">"Idle"</string>
    <string name="preferencesCleanSessionEnabled">Clean Session</string>
    <string name="publish">Report</string>
    <string name="preferencesPubExtendedDataSummary">Include extended data in location reports</string>
    <string name="preferencesPubExtendedData">Extended data</string>
    <string name="preferencesAutostartSummary">Automatically start on device boot</string>
    <string name="preferencesAutostart">Autostart</string>
    <string name="preferencesLocatorAccuracyBackground">Locator background accuracy</string>
    <string name="preferencesLocatorAccuracyBackgroundSummary">Accuracy and power usage in the background</string>
    <string name="preferencesLocatorAccuracyForeground">Locator foreground accuracy</string>
    <string name="preferencesLocatorAccuracyForegroundSummary">Accuracy and power usage in the foreground</string>
    <string name="preferencesBeaconForegroundPeriod">Foreground beacon scanning period</string>
    <string name="preferencesBeaconForegroundPeriodSummary">Seconds between foreground beacon scans</string>
    <string name="preferencesBeaconBackgroundPeriod">Background beacon scannning period</string>
    <string name="preferencesBeaconBackgroundPeriodSummary">Seconds between background beacon scans</string>
    <string name="preferencesRemoteCommand">Remote commands</string>
    <string name="preferencesRemoteCommandSummary">Enable remote commands</string>
    <string name="preferencesRemoteConfiguration">Remote configuration</string>
    <string name="preferencesRemoteConfigurationSummary">Allow remote configuration </string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius">Radius</string>
    <string name="currentLocationNotAvailable">The current location is not available</string>
    <string name="addWaypoint">Add waypoint</string>
    <string name="waypoints">Waypoints</string>
    <string name="transitionEnter">Enter</string>
    <string name="transitionLeave">Leave</string>
    <string name="transitionBoth">Enter &amp; Leave</string>
    <string name="transitionEntering">Entering</string>
    <string name="transitionLeaving">Leaving</string>
    <string name="transitionentering">enters</string>
    <string name="transitionleaving">leaves</string>
    <string name="preferencesImportExport">Import / Export</string>
    <string name="exportIncludeDeviceIdentiaction">Device identification</string>
    <string name="exportIncludeUsernamePassword">Username and password</string>
    <string name="exportIncludeBrokerConnection">Connection</string>
    <string name="exportIncludes">Select data to include in the export</string>
    <string name="export">Export</string>
    <string name="exportConfiguration">Export preferences</string>
    <string name="exportIncludeWaypoints">Waypoints</string>
    <string name="preferencesExport">Export</string>
    <string name="preferencesExportSummary">Export preferences</string>
    <string name="preferencesImportFile">Import from file</string>
    <string name="preferencesImportFileSummary">Import preferences from file</string>
    <string name="preferencesImportClipboard">Import from clipboard</string>
    <string name="preferencesImportClipboardSummary">Import preferences from file</string>
    <string name="contactLocationUnknown">No location is available</string>
    <string name="preferencesAdvancedCategoryBeacons">Beacons</string>
    <string name="preferencesCustomBeaconLayout">Custom beacon layout</string>
    <string name="preferencesCustomBeaconLayoutSummary">Custom layout to detect beacons</string>
    <string name="beaconRangingEnabledSummary">Enable ranging for BLE beacons</string>
    <string name="beaconRangingEnabled">Ranging</string>
    <string name="menuContactShow">Center</string>
    <string name="menuContactDetails">Details</string>
    <string name="menuContactNavigate">Navigate</string>
    <string name="menuContactFollow">Follow</string>
    <string name="menuContactUnfollow">Unfollow</string>
    <string name="assignContact">Link contact</string>
    <string name="unassignContact">Unlink contact</string>
    <string name="contactDetailsLocation">Location</string>
    <string name="contactDetailsAccuracy">Accuracy</string>
    <string name="contactDetailsReportedTime">Reported</string>
    <string name="contactDetailsTopic">Topic</string>
    <string name="contactDetailsName">Name</string>
    <string name="contactListPlaceholder">No locations received yet</string>
    <string name="waypointListPlaceholder">No waypoints defined yet</string>
    <string name="waypointLocalDefaultFormatMessage" formatted="false">%e %d</string>
    <string name="geofenceActive">Geofence enabled</string>
    <string name="waypointRemove">Remove</string>
    <string name="idLocations">drawer.id.locations</string>
    <string name="idWaypoints">drawer.id.waypoints</string>
    <string name="idSettings">drawer.id.settings</string>
    <string name="leave">Leave</string>
    <string name="enter">Enter</string>
    <string name="clientId">Client ID</string>
    <string name="eventbusLicense">License for file eventbus.jar</string>
    <string name="pahoLicense">License for file paho.jar</string>
    <string name="bugsnagLicense">License for file bugsnag-android.jar</string>
    <string name="userImage">user image</string>
    <string name="importConfig">Import</string>
    <string name="tls">TLS</string>
    <string name="preferencesKeepalive">Keepalive</string>
    <string name="seconds">Seconds</string>
</resources>