<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="root">
    <Preference
        android:key="connectionScreen"
        android:title="@string/preferencesServer">
    </Preference>


    <PreferenceScreen
        android:key="reportingScreen"
        android:title="@string/preferencesReporting" >
    </PreferenceScreen>

    <PreferenceScreen
        android:key="notificationScreen"
        android:title="@string/preferencesNotification" >

    </PreferenceScreen>
    <PreferenceScreen
        android:key="advancedScreen"
        android:title="@string/preferencesAdvanced" >

    </PreferenceScreen>

    <Preference
        android:key="export"
        android:title="@string/preferencesExport">
    </Preference>

    <PreferenceScreen
        android:key="informationScreen"
        android:title="@string/preferencesInfo" >

        <Preference
            android:key="documentation"
            android:summary="@string/preferencesDocumentationSummary"
            android:title="@string/preferencesDocumentation" />
        <Preference
            android:key="community"
            android:summary="@string/preferencesCommunitySummary"
            android:title="@string/preferencesCommunity" />
        <Preference
            android:key="twitter"
            android:summary="@string/preferencesTwitterSummary"
            android:title="@string/preferencesTwitter" />

        <Preference
            android:key="repo"
            android:summary="@string/preferencesRepositorySummary"
            android:title="@string/preferencesRepository" />

        <PreferenceScreen
            android:key="licensesScreen"
            android:summary="@string/preferencesLicensesSummary"
            android:title="@string/preferencesLicenses">
            <org.owntracks.android.support.ToolbarPreference
                android:key="licenses"
                android:title="@string/preferencesLicenses" />

            <Preference
                android:key="eclipse-paho"
                android:title="Eclipse Foundation"
                android:summary="Paho MQTTv3.1 Java Client" />
            <Preference
                android:key="greenrobot-eventbus"
                android:title="Greenrobot"
                android:summary="EventBus" />
            <Preference
                android:key="greenrobot-greendao"
                android:title="Greenrobot"
                android:summary="GreenDao" />
            <Preference
                android:key="altbeacon-android-beacon-library"
                android:title="AltBeacon"
                android:summary="Android-Beacon-Library" />
            <Preference
                android:key="rengwuxian-materialedittext"
                android:title="Rengwuxian"
                android:summary="MaterialEditText" />
            <Preference
                android:key="mikepenz-materialdrawer"
                android:title="Mikepenz"
                android:summary="MaterialDrawer" />
            <Preference
                android:key="rengwuxian-materialedittext"
                android:title="Rengwuxian"
                android:summary="MaterialEditText" />
            <Preference
                android:key="afollestad-materialdialogs"
                android:title="Afollestad"
                android:summary="Material-Dialogs" />

        </PreferenceScreen>

        <Preference
            android:key="versionReadOnly"
            android:title="@string/preferencesVersion" />
    </PreferenceScreen>
</PreferenceScreen>