<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameHosted"
        android:inputType="textVisiblePassword|textNoSuggestions"

        app:met_baseColor="@color/textPrimary"
        app:met_primaryColor="@color/accent"
        app:met_floatingLabel="highlight"
        android:hint="@string/preferencesUserUsername"

        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deviceIdHosted"
        android:inputType="textVisiblePassword"
        android:hint="@string/preferencesDeviceNameHosted"

        app:met_baseColor="@color/textPrimary"
        app:met_primaryColor="@color/accent"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/preferencesDeviceNameHosted"
        app:met_floatingLabelAlwaysShown="false"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordHosted"
        android:inputType="textPassword"
        app:met_floatingLabel="highlight"
        app:met_baseColor="@color/textPrimary"
        app:met_primaryColor="@color/accent"
        app:met_floatingLabelText="@string/preferencesBrokerPasswordHosted"
        android:hint="@string/preferencesBrokerPasswordHosted"
        />
    
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trackerId"
        android:inputType="textVisiblePassword"
        app:met_baseColor="@color/textPrimary"
        app:met_primaryColor="@color/accent"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/preferencesTrackerId"
        app:met_floatingLabelAlwaysShown="true"
        app:met_maxCharacters="2"
        android:maxLength="2"
        />
</LinearLayout>