<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/tlsWrapper"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/preferencesCleanSessionEnabled"
            android:textSize="18sp"
            />
        <Switch
            android:id="@+id/cleanSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_centerVertical="true"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/keepalive"
        android:hint="@integer/valKeepalive"
        android:inputType="textNoSuggestions"
        app:baseColor="@color/textPrimary"
        app:primaryColor="@color/accent"
        app:floatingLabel="highlight"
        app:floatingLabelAlwaysShown="true"
        app:floatingLabelText="@string/preferencesKeepalive"
        app:helperText="@string/seconds"
        android:digits="0123456789"
        />

</LinearLayout>