<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/tlsWrapper"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tls"
            android:textSize="18sp"
            />
        <Switch
            android:id="@+id/tls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:cursorVisible="false"
        android:windowSoftInputMode="stateAlwaysHidden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tlsCaCrt"
        android:inputType="textVisiblePassword"
        android:hint="@string/preferencesCaCrtPath"
        app:met_baseColor="@color/textPrimary"
        app:met_primaryColor="@color/accent"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="false"
        android:focusableInTouchMode="false"
        app:met_floatingLabelText="@string/preferencesCaCrtPath"

        />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tlsClientCrt"
        android:hint="@string/preferencesClientCrtPath"
        app:met_baseColor="@color/textPrimary"
        app:met_primaryColor="@color/accent"
        android:cursorVisible="false"
        app:met_floatingLabel="highlight"
        android:focusableInTouchMode="false"
        app:met_floatingLabelAlwaysShown="false"
        android:windowSoftInputMode="stateAlwaysHidden"
        android:inputType="textVisiblePassword"
        app:met_floatingLabelText="@string/preferencesClientCrtPath"
        />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tlsClientCrtPassword"
        android:inputType="textPassword"
        app:met_floatingLabel="highlight"
        app:met_baseColor="@color/textPrimary"
        app:met_primaryColor="@color/accent"
        android:hint="@string/preferencesClientCrtPassword"
        app:met_singleLineEllipsis="true"

        />

</LinearLayout>