<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        style="@style/DialogView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/tls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/tls" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlsCaCrtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/preferencesCaCrtPath"
            android:inputType="textVisiblePassword"
            android:windowSoftInputMode="stateAlwaysHidden">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tlsCaCrt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlsClientCrtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/preferencesClientCrtPath"
            android:windowSoftInputMode="stateAlwaysHidden">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tlsClientCrt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlsClientCrtPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/preferencesClientCrtPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tlsClientCrtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</layout>